# tradewise-ai

./: .dockerignore  .env.example  .gitignore  .replit  AI_DEPLOYMENT_GUIDE.md  ALERT_SYSTEM_SUCCESS_REPORT.md  AUTHENTICATION_USER_FLOWS_QA_REPORT.md  BILLING_AUTH_TEST_REPORT.md  CODEBASE_CLEANUP_REPORT.md  CONTACT_INFO_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INFRASTRUCTURE_COMPLETION_REPORT.md  DEPLOYMENT_READINESS_AUDIT.md  DESKTOP_FIRST_QA_REPORT.md  Dockerfile  Dockerfile.worker  ENDPOINT_SECURITY_MAP.md  FEATURE_EXPANSION_REPORT.md  GITHUB_SETUP_GUIDE.md  MODERN_UI_IMPLEMENTATION_REPORT.md  MONITORING_GUIDE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE_1_TO_5_TESTING_REPORT.md  PHASE_6_MONITORING_COMPLETION_REPORT.md  PHASE_6_SUCCESS_CONFIRMATION.md  PLATFORM_ENHANCEMENT_PROPOSAL.md  POST_DEPLOYMENT_TEST_REPORT.md  PREMIUM_FEATURES_SUMMARY.md  PRODUCTION_READINESS_FINAL_REPORT.md  QA_COMPREHENSIVE_TESTING_REPORT.md  README.md  REDIS_ASYNC_QUEUE_COMPLETION_REPORT.md  RENDER_DEPLOYMENT_GUIDE.md  SCALABILITY_GUIDE.md  SECURITY_AUDIT_REPORT.md  SECURITY_PRODUCTION_AUDIT.md  STOCK_ANALYSIS_OPTIMIZATION_FINAL_REPORT.md  UI_CLEANUP_COMPLETION_REPORT.md  UNIFIED_ERROR_HANDLING_COMPLETION_REPORT.md  account_settings.py  (+260 more)
archive/: ai_training.py  comprehensive_debug_report_2025_07_22.md  desktop_optimization.css
attached_assets/: Pasted-1-Remove-Legacy-UI-Delete-all-outdated-templates-simple-main-html-desktop-dashboard-html-test-cl-1753487152566_1753487152566.txt  (+7 more)
data/: sample_stocks.json
instance/: trading_platform.db
k8s/: alertmanager-deployment.yaml  hpa.yaml  (+14 more)
(+226 files in other folders)
