[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.0",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "stripe>=12.3.0",
    "openai>=1.97.0",
    "yfinance>=0.2.65",
    "bcrypt>=4.3.0",
    "flask-caching>=2.3.1",
    "flask-compress>=1.18",
    "flask-socketio>=5.5.1",
    "joblib>=1.5.1",
    "requests>=2.32.4",
    "python-socketio>=5.13.0",
    "eventlet>=0.40.1",
    "scipy>=1.16.0",
    "redis>=6.2.0",
    "textblob>=0.19.0",
    "schedule>=1.2.2",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "anthropic>=0.58.2",
    "trafilatura>=2.0.0",
    "psutil>=7.0.0",
]
